# Camstar

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kalasoft/camstar/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kalasoft/camstar/: MainActivity.java
app/src/main/jni/: AndroidEvents.cpp  AppContext.cpp  AppContext.h  Bitmap.cpp  Bitmap.h  CMakeLists.txt  Commons.cpp  Commons.h  FileManager.h  JavaCall.cpp  JavaCall.h  Time.h  main.cpp
app/src/main/jni/Doc/: Erros
app/src/main/jni/FileManager/: FileManager.cpp  FileManager.h  stb_image.h
app/src/main/jni/Graphics/: GLContext.cpp  GLContext.h  Shader.cpp  Shader.h  VulkanContext.cpp  VulkanContext.h
app/src/main/jni/UI/: ClickListener.cpp  ClickListener.h  ImageView.cpp  ImageView.h  ImageViewGL.cpp  ImageViewGL.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  View.cpp  View.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kalasoft/camstar/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
